CMAKE_MINIMUM_REQUIRED(VERSION 2.8.8)
PROJECT(phantompy)

SET(CMAKE_BUILD_TYPE "Release")
#SET(CMAKE_BUILD_TYPE "Debug")
SET(CMAKE_VERBOSE_MAKEFILE OFF)
SET(CMAKE_INCLUDE_CURRENT_DIR ON)
SET(CMAKE_AUTOMOC ON)
SET(BUILD_SHARED_LIBS ON)

SET(CMAKE_CXX_FLAGS         "-Wall -std=c++11 -fPIC")
SET(CMAKE_CXX_FLAGS_DEBUG   "-O0 -g")
SET(CMAKE_CXX_FLAGS_RELEASE "-O3")

FIND_PACKAGE(Qt5Core)
FIND_PACKAGE(Qt5Network)
FIND_PACKAGE(Qt5WebKit)
FIND_PACKAGE(Qt5WebKit)
FIND_PACKAGE(Qt5WebKitWidgets)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${Qt5Core_EXECUTABLE_COMPILE_FLAGS}")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${Qt5Network_EXECUTABLE_COMPILE_FLAGS}")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${Qt5Widgets_EXECUTABLE_COMPILE_FLAGS}")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${Qt5WebKit_EXECUTABLE_COMPILE_FLAGS}")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${Qt5WebKitWidgets_EXECUTABLE_COMPILE_FLAGS}")

# Add include directories
INCLUDE_DIRECTORIES(
    ${CMAKE_BINARY_DIR}
    ${CMAKE_CURRENT_BINARY_DIR}
    ${Qt5Core_INCLUDE_DIRS}
    ${Qt5Network_INCLUDE_DIRS}
    ${Qt5Widgets_INCLUDE_DIRS}
    ${Qt5WebKit_INCLUDE_DIRS}
    ${Qt5WebKitWidgets_INCLUDE_DIRS}
)

# Use the compile definitions defined in the Qt 5 Widgets module
ADD_DEFINITIONS(${Qt5Core_DEFINITIONS})
ADD_DEFINITIONS(${Qt5Network_DEFINITIONS})
ADD_DEFINITIONS(${Qt5Widgets_DEFINITIONS})
ADD_DEFINITIONS(${Qt5WebKit_DEFINITIONS})
ADD_DEFINITIONS(${Qt5WebKitWidgets_DEFINITIONS})

IF(CMAKE_BUILD_TYPE MATCHES Release)
    MESSAGE(STATUS "Release build")
    ADD_DEFINITIONS(-DQT_NO_DEBUG)
    ADD_DEFINITIONS(-DQT_NO_DEBUG_OUTPUT)
ELSE()
    MESSAGE(STATUS "Debug build")
ENDIF()

SET(SOURCES
    lib/phantompy.cpp
    lib/private/context.cpp
    lib/private/page.cpp
    lib/private/frame.cpp
    lib/private/image.cpp
    lib/private/webelement.cpp
    lib/private/webelementcollection.cpp
    lib/private/networkmanagerproxy.cpp
)

ADD_LIBRARY(phantompy ${SOURCES})

TARGET_LINK_LIBRARIES(
    phantompy
    ${Qt5Core_LIBRARIES}
    ${Qt5Network_LIBRARIES}
    ${Qt5Widgets_LIBRARIES}
    ${Qt5WebKit_LIBRARIES}
    ${Qt5WebKitWidgets_LIBRARIES}
)

SET_TARGET_PROPERTIES(phantompy PROPERTIES VERSION 0.0.1)

SET(CMAKE_INSTALL_PREFIX /usr)
INSTALL(TARGETS phantompy DESTINATION lib/)
